[gd_scene load_steps=18 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sounds/shoot.wav" type="AudioStream" id=3]
[ext_resource path="res://Invader1.tscn" type="PackedScene" id=4]
[ext_resource path="res://Invader2.tscn" type="PackedScene" id=5]
[ext_resource path="res://Invader3.tscn" type="PackedScene" id=6]
[ext_resource path="res://LaserBolt.tscn" type="PackedScene" id=7]
[ext_resource path="res://InvaderLaserBolt.tscn" type="PackedScene" id=8]
[ext_resource path="res://InvaderLaserBolt2.tscn" type="PackedScene" id=9]
[ext_resource path="res://Mothership.tscn" type="PackedScene" id=10]
[ext_resource path="res://Font/Xolonium-Regular.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=12]
[ext_resource path="res://Sounds/fastinvader3.wav" type="AudioStream" id=13]
[ext_resource path="res://Sounds/fastinvader2.wav" type="AudioStream" id=14]
[ext_resource path="res://Sounds/fastinvader1.wav" type="AudioStream" id=15]
[ext_resource path="res://Art/player.png" type="Texture" id=16]

[sub_resource type="DynamicFont" id=1]

size = 32
use_mipmaps = false
use_filter = false
font_data = ExtResource( 11 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Main" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Player" parent="." index="0" instance=ExtResource( 2 )]

position = Vector2( 491.582, 704.823 )
contacts_reported = 5

[node name="LaserBoltSound" type="AudioStreamPlayer" parent="." index="1"]

stream = ExtResource( 3 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = ""
_sections_unfolded = [ "Pause" ]

[node name="Invader40" parent="." index="2" instance=ExtResource( 4 )]

position = Vector2( 109.743, 367.602 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader30" parent="." index="3" instance=ExtResource( 4 )]

position = Vector2( 109.743, 311.126 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader41" parent="." index="4" instance=ExtResource( 4 )]

position = Vector2( 189.743, 367.602 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader31" parent="." index="5" instance=ExtResource( 4 )]

position = Vector2( 189.743, 311.126 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader42" parent="." index="6" instance=ExtResource( 4 )]

position = Vector2( 269.743, 367.602 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader32" parent="." index="7" instance=ExtResource( 4 )]

position = Vector2( 269.743, 311.126 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader43" parent="." index="8" instance=ExtResource( 4 )]

position = Vector2( 349.743, 367.602 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader33" parent="." index="9" instance=ExtResource( 4 )]

position = Vector2( 349.743, 311.126 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader44" parent="." index="10" instance=ExtResource( 4 )]

position = Vector2( 429.743, 367.602 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader34" parent="." index="11" instance=ExtResource( 4 )]

position = Vector2( 429.743, 311.126 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader45" parent="." index="12" instance=ExtResource( 4 )]

position = Vector2( 509.743, 367.602 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader35" parent="." index="13" instance=ExtResource( 4 )]

position = Vector2( 509.743, 311.126 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader46" parent="." index="14" instance=ExtResource( 4 )]

position = Vector2( 589.743, 367.602 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader36" parent="." index="15" instance=ExtResource( 4 )]

position = Vector2( 589.743, 311.126 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader47" parent="." index="16" instance=ExtResource( 4 )]

position = Vector2( 669.743, 367.602 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader37" parent="." index="17" instance=ExtResource( 4 )]

position = Vector2( 669.743, 311.126 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader48" parent="." index="18" instance=ExtResource( 4 )]

position = Vector2( 749.743, 367.602 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader38" parent="." index="19" instance=ExtResource( 4 )]

position = Vector2( 749.743, 311.126 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader49" parent="." index="20" instance=ExtResource( 4 )]

position = Vector2( 829.743, 367.602 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader39" parent="." index="21" instance=ExtResource( 4 )]

position = Vector2( 829.743, 311.126 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader410" parent="." index="22" instance=ExtResource( 4 )]

position = Vector2( 909.743, 367.602 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader310" parent="." index="23" instance=ExtResource( 4 )]

position = Vector2( 909.743, 311.126 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader20" parent="." index="24" instance=ExtResource( 5 )]

position = Vector2( 110.844, 256.225 )

[node name="Invader21" parent="." index="25" instance=ExtResource( 5 )]

position = Vector2( 190.04, 256.225 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader22" parent="." index="26" instance=ExtResource( 5 )]

position = Vector2( 270.04, 256.225 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader23" parent="." index="27" instance=ExtResource( 5 )]

position = Vector2( 350.04, 256.225 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader24" parent="." index="28" instance=ExtResource( 5 )]

position = Vector2( 430.04, 256.225 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader25" parent="." index="29" instance=ExtResource( 5 )]

position = Vector2( 510.04, 256.225 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader26" parent="." index="30" instance=ExtResource( 5 )]

position = Vector2( 590.04, 256.225 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader27" parent="." index="31" instance=ExtResource( 5 )]

position = Vector2( 670.04, 256.225 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader28" parent="." index="32" instance=ExtResource( 5 )]

position = Vector2( 750.04, 256.225 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader29" parent="." index="33" instance=ExtResource( 5 )]

position = Vector2( 830.04, 256.225 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader210" parent="." index="34" instance=ExtResource( 5 )]

position = Vector2( 910.04, 256.225 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader10" parent="." index="35" instance=ExtResource( 5 )]

position = Vector2( 110.486, 203.226 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader11" parent="." index="36" instance=ExtResource( 5 )]

position = Vector2( 190.04, 203.226 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader12" parent="." index="37" instance=ExtResource( 5 )]

position = Vector2( 270.04, 203.226 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader13" parent="." index="38" instance=ExtResource( 5 )]

position = Vector2( 350.04, 203.226 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader14" parent="." index="39" instance=ExtResource( 5 )]

position = Vector2( 430.04, 203.226 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader15" parent="." index="40" instance=ExtResource( 5 )]

position = Vector2( 509.137, 203.226 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader16" parent="." index="41" instance=ExtResource( 5 )]

position = Vector2( 589.137, 203.226 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader17" parent="." index="42" instance=ExtResource( 5 )]

position = Vector2( 669.137, 203.226 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader18" parent="." index="43" instance=ExtResource( 5 )]

position = Vector2( 749.137, 203.226 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader19" parent="." index="44" instance=ExtResource( 5 )]

position = Vector2( 829.137, 203.226 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader110" parent="." index="45" instance=ExtResource( 5 )]

position = Vector2( 909.137, 203.226 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader00" parent="." index="46" instance=ExtResource( 6 )]

position = Vector2( 110.477, 150.189 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader01" parent="." index="47" instance=ExtResource( 6 )]

position = Vector2( 190.477, 150.933 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader02" parent="." index="48" instance=ExtResource( 6 )]

position = Vector2( 270.477, 150.933 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader03" parent="." index="49" instance=ExtResource( 6 )]

position = Vector2( 350.477, 150.933 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader04" parent="." index="50" instance=ExtResource( 6 )]

position = Vector2( 430.477, 150.933 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader05" parent="." index="51" instance=ExtResource( 6 )]

position = Vector2( 510.477, 150.933 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader06" parent="." index="52" instance=ExtResource( 6 )]

position = Vector2( 590.477, 150.933 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader07" parent="." index="53" instance=ExtResource( 6 )]

position = Vector2( 670.477, 150.933 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader08" parent="." index="54" instance=ExtResource( 6 )]

position = Vector2( 750.477, 150.933 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader09" parent="." index="55" instance=ExtResource( 6 )]

position = Vector2( 830.477, 150.933 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Invader010" parent="." index="56" instance=ExtResource( 6 )]

position = Vector2( 910.477, 150.933 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="LaserBolt" parent="." index="57" instance=ExtResource( 7 )]

gravity_scale = 0.0
_sections_unfolded = [ "Collision", "Transform" ]

[node name="InvaderLaserBolt1" parent="." index="58" instance=ExtResource( 8 )]

position = Vector2( -684.67, 46.2221 )
mode = 3
SPEED = 5

[node name="InvaderLaserBolt2" parent="." index="59" instance=ExtResource( 9 )]

position = Vector2( -331.543, 36.979 )
mode = 3
gravity_scale = 0.0
_sections_unfolded = [ "Collision", "Transform", "Z Index" ]
SPEED = 5

[node name="Mothership" parent="." index="60" instance=ExtResource( 10 )]

[node name="ScoreHeading" type="Label" parent="." index="61"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 13.0
margin_top = 4.0
margin_right = 135.0
margin_bottom = 43.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "SCORE"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="TotalScore" type="Label" parent="." index="62"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 159.0
margin_top = 4.0
margin_right = 305.0
margin_bottom = 43.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="HUD" parent="." index="63" instance=ExtResource( 12 )]

[node name="InvaderMovementSound1" type="AudioStreamPlayer" parent="." index="64"]

stream = ExtResource( 13 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = ""

[node name="InvaderMovementSound2" type="AudioStreamPlayer" parent="." index="65"]

stream = ExtResource( 13 )
volume_db = 0.0
pitch_scale = 1.25
autoplay = false
mix_target = 0
bus = ""

[node name="InvaderMovementSound3" type="AudioStreamPlayer" parent="." index="66"]

stream = ExtResource( 14 )
volume_db = 0.0
pitch_scale = 1.5
autoplay = false
mix_target = 0
bus = ""

[node name="InvaderMovementSound4" type="AudioStreamPlayer" parent="." index="67"]

stream = ExtResource( 15 )
volume_db = 0.0
pitch_scale = 1.75
autoplay = false
mix_target = 0
bus = ""

[node name="InvaderSoundTimer" type="Timer" parent="." index="68"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="InvaderSoundTimer2" type="Timer" parent="." index="69"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="InvaderSoundTimer3" type="Timer" parent="." index="70"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = false

[node name="InvaderSoundTimer4" type="Timer" parent="." index="71"]

process_mode = 1
wait_time = 4.0
one_shot = false
autostart = false

[node name="InvaderSoundSpeed" type="Timer" parent="." index="72"]

process_mode = 1
wait_time = 10.0
one_shot = false
autostart = false

[node name="PlayerLife" type="Sprite" parent="." index="73"]

position = Vector2( 35.6044, 742.781 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 16 )
_sections_unfolded = [ "Transform" ]

[node name="PlayerLife2" type="Sprite" parent="." index="74"]

position = Vector2( 77.6044, 742.781 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 16 )
_sections_unfolded = [ "Transform" ]

[connection signal="hit" from="Player" to="." method="_on_Player_hit"]

[connection signal="enteringEarth" from="Invader40" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader40" to="." method="_on_Invader40_hit"]

[connection signal="enteringEarth" from="Invader30" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader30" to="." method="_on_Invader30_hit"]

[connection signal="enteringEarth" from="Invader41" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader41" to="." method="_on_Invader41_hit"]

[connection signal="enteringEarth" from="Invader31" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader31" to="." method="_on_Invader31_hit"]

[connection signal="enteringEarth" from="Invader42" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader42" to="." method="_on_Invader42_hit"]

[connection signal="enteringEarth" from="Invader32" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader32" to="." method="_on_Invader32_hit"]

[connection signal="enteringEarth" from="Invader43" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader43" to="." method="_on_Invader43_hit"]

[connection signal="enteringEarth" from="Invader33" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader33" to="." method="_on_Invader33_hit"]

[connection signal="enteringEarth" from="Invader44" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader44" to="." method="_on_Invader44_hit"]

[connection signal="enteringEarth" from="Invader34" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader34" to="." method="_on_Invader34_hit"]

[connection signal="enteringEarth" from="Invader45" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader45" to="." method="_on_Invader45_hit"]

[connection signal="enteringEarth" from="Invader35" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader35" to="." method="_on_Invader35_hit"]

[connection signal="enteringEarth" from="Invader46" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader46" to="." method="_on_Invader46_hit"]

[connection signal="enteringEarth" from="Invader36" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader36" to="." method="_on_Invader36_hit"]

[connection signal="enteringEarth" from="Invader47" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader47" to="." method="_on_Invader47_hit"]

[connection signal="enteringEarth" from="Invader37" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader37" to="." method="_on_Invader37_hit"]

[connection signal="enteringEarth" from="Invader48" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader48" to="." method="_on_Invader48_hit"]

[connection signal="enteringEarth" from="Invader38" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader38" to="." method="_on_Invader38_hit"]

[connection signal="enteringEarth" from="Invader49" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader49" to="." method="_on_Invader49_hit"]

[connection signal="enteringEarth" from="Invader39" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader39" to="." method="_on_Invader39_hit"]

[connection signal="enteringEarth" from="Invader410" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader410" to="." method="_on_Invader410_hit"]

[connection signal="enteringEarth" from="Invader310" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader310" to="." method="_on_Invader310_hit"]

[connection signal="enteringEarth" from="Invader20" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader20" to="." method="_on_Invader20_hit"]

[connection signal="enteringEarth" from="Invader21" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader21" to="." method="_on_Invader21_hit"]

[connection signal="enteringEarth" from="Invader22" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader22" to="." method="_on_Invader22_hit"]

[connection signal="enteringEarth" from="Invader23" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader23" to="." method="_on_Invader23_hit"]

[connection signal="enteringEarth" from="Invader24" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader24" to="." method="_on_Invader24_hit"]

[connection signal="enteringEarth" from="Invader25" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader25" to="." method="_on_Invader25_hit"]

[connection signal="enteringEarth" from="Invader26" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader26" to="." method="_on_Invader26_hit"]

[connection signal="enteringEarth" from="Invader27" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader27" to="." method="_on_Invader27_hit"]

[connection signal="enteringEarth" from="Invader28" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader28" to="." method="_on_Invader28_hit"]

[connection signal="enteringEarth" from="Invader29" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader29" to="." method="_on_Invader29_hit"]

[connection signal="enteringEarth" from="Invader210" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader210" to="." method="_on_Invader210_hit"]

[connection signal="enteringEarth" from="Invader10" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader10" to="." method="_on_Invader10_hit"]

[connection signal="enteringEarth" from="Invader11" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader11" to="." method="_on_Invader11_hit"]

[connection signal="enteringEarth" from="Invader12" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader12" to="." method="_on_Invader12_hit"]

[connection signal="enteringEarth" from="Invader13" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader13" to="." method="_on_Invader13_hit"]

[connection signal="enteringEarth" from="Invader14" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader14" to="." method="_on_Invader14_hit"]

[connection signal="enteringEarth" from="Invader15" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader15" to="." method="_on_Invader15_hit"]

[connection signal="enteringEarth" from="Invader16" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader16" to="." method="_on_Invader16_hit"]

[connection signal="enteringEarth" from="Invader17" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader17" to="." method="_on_Invader17_hit"]

[connection signal="enteringEarth" from="Invader18" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader18" to="." method="_on_Invader18_hit"]

[connection signal="enteringEarth" from="Invader19" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader19" to="." method="_on_Invader19_hit"]

[connection signal="enteringEarth" from="Invader110" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader110" to="." method="_on_Invader110_hit"]

[connection signal="enteringEarth" from="Invader00" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader00" to="." method="_on_Invader00_hit"]

[connection signal="enteringEarth" from="Invader01" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader01" to="." method="_on_Invader01_hit"]

[connection signal="enteringEarth" from="Invader02" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader02" to="." method="_on_Invader02_hit"]

[connection signal="enteringEarth" from="Invader03" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader03" to="." method="_on_Invader03_hit"]

[connection signal="enteringEarth" from="Invader04" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader04" to="." method="_on_Invader04_hit"]

[connection signal="enteringEarth" from="Invader05" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader05" to="." method="_on_Invader05_hit"]

[connection signal="enteringEarth" from="Invader06" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader06" to="." method="_on_Invader06_hit"]

[connection signal="enteringEarth" from="Invader07" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader07" to="." method="_on_Invader07_hit"]

[connection signal="enteringEarth" from="Invader08" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader08" to="." method="_on_Invader08_hit"]

[connection signal="enteringEarth" from="Invader09" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader09" to="." method="_on_Invader09_hit"]

[connection signal="enteringEarth" from="Invader010" to="." method="_on_Invader_entering_earth"]

[connection signal="hit" from="Invader010" to="." method="_on_Invader010_hit"]

[connection signal="hiding" from="LaserBolt" to="." method="_on_LaserBolt_hiding"]

[connection signal="hiding" from="InvaderLaserBolt1" to="." method="_on_InvaderLaserBolt1_hiding"]

[connection signal="hiding" from="InvaderLaserBolt2" to="." method="_on_InvaderLaserBolt2_hiding"]

[connection signal="hit" from="Mothership" to="." method="_on_Mothership_hit"]

[connection signal="start_game" from="HUD" to="." method="_new_game"]

[connection signal="timeout" from="InvaderSoundTimer" to="." method="_on_InvaderSoundTimer_timeout"]

[connection signal="timeout" from="InvaderSoundTimer2" to="." method="_on_InvaderSoundTimer2_timeout"]

[connection signal="timeout" from="InvaderSoundTimer3" to="." method="_on_InvaderSoundTimer3_timeout"]

[connection signal="timeout" from="InvaderSoundTimer4" to="." method="_on_InvaderSoundTimer4_timeout"]

[connection signal="timeout" from="InvaderSoundSpeed" to="." method="_on_InvaderSoundSpeed_timeout"]


